--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
           class="menu-item" 
           [ngClass]="{'active': isActivePage('archive')}">
           <ion-icon slot="start" name="archive-outline"></ion-icon>
-          <ion-label>archive</ion-label>
+          <ion-label>Archive</ion-label>
         </ion-item>
         <ion-item 
           (click)="navigateTo('calendar'); closeMenu()" 
